--- a/app/src/main/res/layout/activity_main_note.xml
+++ b/app/src/main/res/layout/activity_main_note.xml
@@ -15,39 +15,67 @@
         android:background="@color/colorPrimary"
         android:theme="@style/ToolbarTheme">
 
-
-        <TextView
-            android:id="@+id/note_manager_note"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:clickable="true"
-            android:onClick="fragment_note_manager_note"
-            android:text="@string/manager_note"
-            android:textColor="@color/white" />
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/weishop_headline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:clickable="true"
-            android:onClick="fragment_note_headline"
-            android:text="@string/weishop_headline"
-            android:textColor="@color/white" />
+            <LinearLayout
+                android:layout_marginRight="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:background="@drawable/shape_commodity_title_left"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/note_manager_note"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:padding="@dimen/note_toolbar_textview_padding"
+                    android:onClick="fragment_note_manager_note"
+                    android:text="@string/manager_note"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/income_small_text" />
+
+                <LinearLayout
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/white" />
+
+                <TextView
+                    android:padding="@dimen/note_toolbar_textview_padding"
+                    android:id="@+id/weishop_headline"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:onClick="fragment_note_headline"
+                    android:text="@string/weishop_headline"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/income_small_text" />
+
+            </LinearLayout>
+        </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
 
     <RelativeLayout
-        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
         <FrameLayout
             android:id="@+id/fragment_manager_note"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
         </FrameLayout>
+
         <FrameLayout
             android:id="@+id/fragment_headline"
             android:layout_width="match_parent"
