--- a/app/src/main/res/layout/activity_main_note_manager.xml
+++ b/app/src/main/res/layout/activity_main_note_manager.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.qiang.weishop.FragmentManagerNote">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="388dp"
-        app:layout_constraintVertical_weight="1"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="8dp">
+        android:id="@+id/note_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/order_search"
+        android:layout_weight="1">
 
     </android.support.v7.widget.RecyclerView>
 
     <LinearLayout
-        android:layout_width="388dp"
+        android:id="@+id/linearlayout_add_note"
+        android:background="@color/bottom"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:weightSum="1"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="479dp">
+
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -32,10 +32,9 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:layout_weight="0.11"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/Add_new_note"
             android:textSize="20sp" />
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
