--- a/app/src/main/res/layout/activity_main_note_edit_note.xml
+++ b/app/src/main/res/layout/activity_main_note_edit_note.xml
@@ -65,10 +65,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <Button
-        android:layout_gravity="center_horizontal"
+    <TextView
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:layout_gravity="center"
         android:drawableLeft="@drawable/del_icon_20"
-        android:background="#00000000"
         android:text="@string/delete_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
